新配置方法
