# internal/app/handler/config.go
@@ -23,7 +23,7 @@ func GetSystem(c *gin.Context) {
 	user := middleware.GetClaims(c)
 	api.OkResponse(c, &api.SystemInfo{
 		Version:    domain.Version,
-		IsInitUser: config.AppConfig.User.IsInitUser,
+		IsInitUser: config.appConfig.User.IsInitUser,
 		IsLogin:    user != nil,
 	})
 }
@@ -34,23 +34,39 @@ func GetSystem(c *gin.Context) {
 // @Tags config
 // @Accept json
 // @Produce json
-// @Param InitUserForm body api.InitUserForm true "User initialization form"
+// @Param UserCredentialForm body api.UserCredentialForm true "User initialization form"
 // @Success 200 {object} api.TokenResponse
 // @Failure 400 {object} errno.ApiError "Invalid form data"
 // @Failure 403 {object} errno.ApiError "Forbidden"
 // @Failure 500 {object} errno.ApiError "Internal server error"
 // @Router /api/v1/config/init_user [post]
 func PostInitUser(c *gin.Context) {
-	if config.AppConfig.User.IsInitUser {
+	if config.appConfig.User.IsInitUser {
 		_ = c.Error(errno.NewApiError(http.StatusForbidden))
 		return
 	}
-	var form api.InitUserForm
+	var form api.UserCredentialForm
 	if err := c.ShouldBindJSON(&form); err != nil {
 		_ = c.Error(errno.NewFormError(err))
 	}
 	config.InitUser(form.Username, form.Password)
 
+	token, err := service.GenerateUserJwt(form.Username)
+	if err != nil {
+		_ = c.Error(errno.NewApiErrorWithCause(http.StatusInternalServerError, err))
+		return
+	}
+	api.OkResponse(c, &api.TokenResponse{
+		Token: token,
+	})
+}
+
+func UpdateUserCredential(c *gin.Context) {
+	var form api.UserCredentialForm
+	if err := c.ShouldBindJSON(&form); err != nil {
+		_ = c.Error(errno.NewFormError(err))
+	}
+	config.UpdateUserCredential(form.Username, form.Password)
 	token, err := service.GenerateUserJwt(form.Username)
 	if err != nil {
 		_ = c.Error(errno.NewApiErrorWithCause(http.StatusInternalServerError, err))
@@ -71,15 +87,15 @@ func PostInitUser(c *gin.Context) {
 // @Router /api/v1/config/downloader [get]
 func GetDownloader(c *gin.Context) {
 	form := &api.DownloaderForm{}
-	form.Type = config.AppConfig.Downloader.Client
+	form.Type = config.appConfig.Downloader.Client
 	switch form.Type {
 	case config.DownloaderTypeAria2:
-		form.Api = config.AppConfig.Downloader.Aria2.Api
-		form.Token = config.AppConfig.Downloader.Aria2.Token
+		form.Api = config.appConfig.Downloader.Aria2.Api
+		form.Token = config.appConfig.Downloader.Aria2.Token
 	case config.DownloaderTypeQBittorrent:
-		form.Api = config.AppConfig.Downloader.QBittorrent.Api
-		form.Username = config.AppConfig.Downloader.QBittorrent.Username
-		form.Token = config.AppConfig.Downloader.QBittorrent.Password
+		form.Api = config.appConfig.Downloader.QBittorrent.Api
+		form.Username = config.appConfig.Downloader.QBittorrent.Username
+		form.Token = config.appConfig.Downloader.QBittorrent.Password
 	}
 	api.OkResponse(c, form)
 }
